monitoring/thanos-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thanos-querier
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: thanos-querier
  port:
    targetPort: web
  tls:
    termination: reencrypt
